
* added presenters

New Features
------------

* added `create_server(config_path)` to simplify wsgi script
* added `dimension_schema` option to star browser – use this when you have
  all dimensions grouped in a separate schema than fact table 
* added `HierarchyError`
* added presenters: simple_html_table, simple_data_table, text_table
* added create_presenter(presenter_type, options ...)

Changes
-------

* Changed string representation of a set cut: now using semicolon ';' as a
  separator instead of a plus symbol '+'

Fixes
-----

* fixed ordering bug
* `AggregationResult.table_rows` now works when there is no point cut
* get correct reference in `table_rows` – now works when simple denormalized
  table is used 

0.10
====

Quick Summary
-------------

* Dimension defition can have a "template". For example:

  {
      "name": "contract_date",
      "template": "date"
  }
* added table_rows() and cross_table()
* added simple_model(cube_name, dimension_names, measures)

*Incompatibilities:*  use `create_model()` instead of `Model(**dict)`, if you
  were using just `load_model()`, you are fine.

New Features
------------

* To address issue #8 create_model(dict) was added as replacement for
  Model(**dict). Model() from now on will expect correctly constructed model
  objects. `create_model()` will be able to handle various simplifications and
  defaults during the construction process.
* added `info` attribute to all model objects. It can be used to store custom,
  application or front-end specific information
* preliminary implementation of `cross_table()` (interface might be changed)
* `AggregationResult.table_rows()` - new method that iterates through
  drill-down rows and returns a tuple with key, label, path, and rest of the
  fields.
* dimension in model description can specify another template dimension – all
  properties from the template will be inherited in the new dimension. All